Fixed horizontal overflow issue

--- a/templates/assets/css/default.css
+++ b/templates/assets/css/default.css
@@ -3,7 +3,8 @@ html, body {
     padding: 0;
     margin: 0;
     max-width: 100%;
-    overflow-x: none;
+    overflow-x: hidden;
+    position: relative;
 }
 
 .main {
